--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <!-- import this BEFORE any scripts -->
-    <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script>
+    <!-- <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script> -->
   </head>
   <body>
     <div id="root"></div>
